refactor: leverage Weka built-ins to replace custom AUC and cross-validation implementations